Bug 78907 - <sys/types.h> does not define pthread types
Summary: <sys/types.h> does not define pthread types
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: standards (show other bugs)
Version: 6.0-CURRENT
Hardware: Any Any
: Normal Affects Only Me
Assignee: freebsd-standards (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-03-16 03:40 UTC by Craig Rodrigues
Modified: 2005-06-01 02:21 UTC (History)
1 user (show)

See Also:


Attachments
file.diff (5.97 KB, patch)
2005-03-16 03:40 UTC, Craig Rodrigues
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Craig Rodrigues 2005-03-16 03:40:02 UTC
According to:
http://www.opengroup.org/onlinepubs/009695399/basedefs/sys/types.h.html

#include <sys/types.h>
should include the definitions of pthread types.
This was reported by Brooks Davis:
http://lists.freebsd.org/pipermail/freebsd-threads/2005-March/002951.html

FreeBSD's <sys/types> currently does not do this, breaking compilation of some
software like GridEngine.  Creating a new private <sys/_pthreadtypes.h>
header file which is included by <sys/types.h> and <pthread.h>
should solve this problem.
Comment 1 Craig Rodrigues freebsd_committer freebsd_triage 2005-06-01 02:20:31 UTC
State Changed
From-To: open->closed

Patch commited.